--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -378,7 +378,7 @@
         <activity android:name=".tuner.TunerActivity"
                   android:enabled="false"
                   android:icon="@drawable/tuner"
-                  android:theme="@style/TunerSettings"
+                  android:theme="@style/Theme.SubSettingsBase"
                   android:label="@string/system_ui_tuner"
                   android:process=":tuner"
                   android:exported="true">
@@ -396,7 +396,7 @@
             android:name=".tuner.StatusBarTuner"
             android:targetActivity=".tuner.TunerActivity"
             android:icon="@drawable/tuner"
-            android:theme="@style/TunerSettings"
+            android:theme="@style/Theme.SubSettingsBase"
             android:label="@string/status_bar"
             android:process=":tuner"
             android:exported="true">
@@ -410,7 +410,7 @@
             android:name=".tuner.NavBarTuner"
             android:targetActivity=".tuner.TunerActivity"
             android:icon="@drawable/tuner"
-            android:theme="@style/TunerSettings"
+            android:theme="@style/Theme.SubSettingsBase"
             android:label="@string/nav_bar"
             android:process=":tuner"
             android:exported="true">
@@ -424,7 +424,7 @@
             android:name=".tuner.TunerActivity"
             android:targetActivity=".tuner.TunerActivity"
             android:icon="@drawable/tuner"
-            android:theme="@style/TunerSettings"
+            android:theme="@style/Theme.SubSettingsBase"
             android:label="@string/tuner_full_importance_settings"
             android:process=":tuner"
             android:exported="true">
